sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value ecart
  ecart=getNombreValeurs()/2
  ^AlgShellSort:4: error: not found: value ecart
  while(ecart>0){
        ^AlgShellSort:5: error: not found: value -
    for (i-ecart<- 1 to getNombreValeurs()-1){
          ^AlgShellSort:5: error: not found: value -
    for (i-ecart<- 1 to getNombreValeurs()-1){
          ^