sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  ecart=getNombreValeurs()/2
  while(ecart>0){
    for (i-ecart<- 1 to getNombreValeurs()-1){
    val v=getValeur(i-ecart)
    var j =i-ecart
    while(j>0 && getValeur(j-1)>v){
      setValeur(j, getValeur(j-1))
      j=j-1
    }
    setValeur(j, v)
  }
  }
}